sidebar position fix on mobile verson

--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -168,6 +168,7 @@
 
 @media screen and (max-width: 520px) {
   .sidebar {
+    position: fixed;
     display: flex;
     flex-direction: row;
     bottom: 0;
